src/executables/loader_grammar.output
Grammar

    0 $accept: loader_start $end

    1 $@1: %empty

    2 loader_start: $@1 loader_lines

    3 loader_lines: line
    4             | loader_lines line

    5 line: one_line NL
    6     | NL

    7 one_line: command_line
    8         | instance_line

    9 command_line: class_command
   10             | id_command

   11 id_command: CMD_ID IDENTIFIER INT_LIT

   12 class_command: CMD_CLASS IDENTIFIER class_commamd_spec

   13 class_commamd_spec: attribute_list
   14                   | attribute_list constructor_spec
   15                   | attribute_list_qualifier attribute_list
   16                   | attribute_list_qualifier attribute_list constructor_spec

   17 attribute_list_qualifier: CLASS
   18                         | SHARED
   19                         | DEFAULT

   20 attribute_list: START_PAREN END_PAREN
   21               | START_PAREN attribute_names END_PAREN

   22 attribute_names: attribute_name
   23                | attribute_names attribute_name
   24                | attribute_names COMMA attribute_name

   25 attribute_name: IDENTIFIER

   26 constructor_spec: CMD_CONSTRUCTOR IDENTIFIER constructor_argument_list

   27 constructor_argument_list: START_PAREN END_PAREN
   28                          | START_PAREN argument_names END_PAREN

   29 argument_names: argument_name
   30               | argument_names argument_name
   31               | argument_names COMMA argument_name

   32 argument_name: IDENTIFIER

   33 instance_line: object_id
   34              | object_id constant_list
   35              | constant_list

   36 object_id: OID_

   37 constant_list: constant
   38              | constant_list constant

   39 constant: ansi_string
   40         | dq_string
   41         | nchar_string
   42         | bit_string
   43         | sql2_date
   44         | sql2_time
   45         | sql2_timestamp
   46         | sql2_timestampltz
   47         | sql2_timestamptz
   48         | utime
   49         | sql2_datetime
   50         | sql2_datetimeltz
   51         | sql2_datetimetz
   52         | NULL_
   53         | TIME_LIT4
   54         | TIME_LIT42
   55         | TIME_LIT3
   56         | TIME_LIT31
   57         | TIME_LIT2
   58         | TIME_LIT1
   59         | INT_LIT
   60         | REAL_LIT
   61         | DATE_LIT2
   62         | monetary
   63         | object_reference
   64         | set_constant
   65         | system_object_reference

   66 ansi_string: Quote SQS_String_Body

   67 nchar_string: NQuote SQS_String_Body

   68 dq_string: DQuote DQS_String_Body

   69 sql2_date: DATE_ Quote SQS_String_Body

   70 sql2_time: TIME Quote SQS_String_Body

   71 sql2_timestamp: TIMESTAMP Quote SQS_String_Body

   72 sql2_timestampltz: TIMESTAMPLTZ Quote SQS_String_Body

   73 sql2_timestamptz: TIMESTAMPTZ Quote SQS_String_Body

   74 utime: UTIME Quote SQS_String_Body

   75 sql2_datetime: DATETIME Quote SQS_String_Body

   76 sql2_datetimeltz: DATETIMELTZ Quote SQS_String_Body

   77 sql2_datetimetz: DATETIMETZ Quote SQS_String_Body

   78 bit_string: BQuote SQS_String_Body
   79           | XQuote SQS_String_Body

   80 object_reference: OBJECT_REFERENCE class_identifier
   81                 | OBJECT_REFERENCE class_identifier instance_number

   82 class_identifier: INT_LIT
   83                 | IDENTIFIER

   84 instance_number: OID_DELIMETER INT_LIT

   85 set_constant: SET_START_BRACE SET_END_BRACE
   86             | SET_START_BRACE set_elements SET_END_BRACE

   87 set_elements: constant
   88             | set_elements constant
   89             | set_elements COMMA constant
   90             | set_elements NL constant
   91             | set_elements COMMA NL constant

   92 system_object_reference: ref_type Quote SQS_String_Body

   93 ref_type: REF_ELO_INT
   94         | REF_ELO_EXT
   95         | REF_USER
   96         | REF_CLASS

   97 monetary: DOLLAR_SYMBOL REAL_LIT
   98         | YEN_SYMBOL REAL_LIT
   99         | WON_SYMBOL REAL_LIT
  100         | TURKISH_LIRA_CURRENCY REAL_LIT
  101         | BACKSLASH REAL_LIT
  102         | BRITISH_POUND_SYMBOL REAL_LIT
  103         | CAMBODIAN_RIEL_SYMBOL REAL_LIT
  104         | CHINESE_RENMINBI_SYMBOL REAL_LIT
  105         | INDIAN_RUPEE_SYMBOL REAL_LIT
  106         | RUSSIAN_RUBLE_SYMBOL REAL_LIT
  107         | AUSTRALIAN_DOLLAR_SYMBOL REAL_LIT
  108         | CANADIAN_DOLLAR_SYMBOL REAL_LIT
  109         | BRASILIAN_REAL_SYMBOL REAL_LIT
  110         | ROMANIAN_LEU_SYMBOL REAL_LIT
  111         | EURO_SYMBOL REAL_LIT
  112         | SWISS_FRANC_SYMBOL REAL_LIT
  113         | DANISH_KRONE_SYMBOL REAL_LIT
  114         | NORWEGIAN_KRONE_SYMBOL REAL_LIT
  115         | BULGARIAN_LEV_SYMBOL REAL_LIT
  116         | VIETNAMESE_DONG_SYMBOL REAL_LIT
  117         | CZECH_KORUNA_SYMBOL REAL_LIT
  118         | POLISH_ZLOTY_SYMBOL REAL_LIT
  119         | SWEDISH_KRONA_SYMBOL REAL_LIT
  120         | CROATIAN_KUNA_SYMBOL REAL_LIT
  121         | SERBIAN_DINAR_SYMBOL REAL_LIT


Terminals, with rules where they appear

$end (0) 0
error (256)
NL (258) 5 6 90 91
NULL_ (259) 52
CLASS (260) 17
SHARED (261) 18
DEFAULT (262) 19
DATE_ (263) 69
TIME (264) 70
UTIME (265) 74
TIMESTAMP (266) 71
TIMESTAMPLTZ (267) 72
TIMESTAMPTZ (268) 73
DATETIME (269) 75
DATETIMELTZ (270) 76
DATETIMETZ (271) 77
CMD_ID (272) 11
CMD_CLASS (273) 12
CMD_CONSTRUCTOR (274) 26
REF_ELO_INT (275) 93
REF_ELO_EXT (276) 94
REF_USER (277) 95
REF_CLASS (278) 96
OBJECT_REFERENCE (279) 80 81
OID_DELIMETER (280) 84
SET_START_BRACE (281) 85 86
SET_END_BRACE (282) 85 86
START_PAREN (283) 20 21 27 28
END_PAREN (284) 20 21 27 28
REAL_LIT (285) 60 97 98 99 100 101 102 103 104 105 106 107 108 109
    110 111 112 113 114 115 116 117 118 119 120 121
INT_LIT (286) 11 59 82 84
OID_ (287) 36
TIME_LIT4 (288) 53
TIME_LIT42 (289) 54
TIME_LIT3 (290) 55
TIME_LIT31 (291) 56
TIME_LIT2 (292) 57
TIME_LIT1 (293) 58
DATE_LIT2 (294) 61
YEN_SYMBOL (295) 98
WON_SYMBOL (296) 99
BACKSLASH (297) 101
DOLLAR_SYMBOL (298) 97
TURKISH_LIRA_CURRENCY (299) 100
BRITISH_POUND_SYMBOL (300) 102
CAMBODIAN_RIEL_SYMBOL (301) 103
CHINESE_RENMINBI_SYMBOL (302) 104
INDIAN_RUPEE_SYMBOL (303) 105
RUSSIAN_RUBLE_SYMBOL (304) 106
AUSTRALIAN_DOLLAR_SYMBOL (305) 107
CANADIAN_DOLLAR_SYMBOL (306) 108
BRASILIAN_REAL_SYMBOL (307) 109
ROMANIAN_LEU_SYMBOL (308) 110
EURO_SYMBOL (309) 111
SWISS_FRANC_SYMBOL (310) 112
DANISH_KRONE_SYMBOL (311) 113
NORWEGIAN_KRONE_SYMBOL (312) 114
BULGARIAN_LEV_SYMBOL (313) 115
VIETNAMESE_DONG_SYMBOL (314) 116
CZECH_KORUNA_SYMBOL (315) 117
POLISH_ZLOTY_SYMBOL (316) 118
SWEDISH_KRONA_SYMBOL (317) 119
CROATIAN_KUNA_SYMBOL (318) 120
SERBIAN_DINAR_SYMBOL (319) 121
IDENTIFIER (320) 11 12 25 26 32 83
Quote (321) 66 69 70 71 72 73 74 75 76 77 92
DQuote (322) 68
NQuote (323) 67
BQuote (324) 78
XQuote (325) 79
SQS_String_Body (326) 66 67 69 70 71 72 73 74 75 76 77 78 79 92
DQS_String_Body (327) 68
COMMA (328) 24 31 89 91


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
loader_start (75)
    on left: 2, on right: 0
$@1 (76)
    on left: 1, on right: 2
loader_lines (77)
    on left: 3 4, on right: 2 4
line (78)
    on left: 5 6, on right: 3 4
one_line (79)
    on left: 7 8, on right: 5
command_line (80)
    on left: 9 10, on right: 7
id_command (81)
    on left: 11, on right: 10
class_command (82)
    on left: 12, on right: 9
class_commamd_spec (83)
    on left: 13 14 15 16, on right: 12
attribute_list_qualifier (84)
    on left: 17 18 19, on right: 15 16
attribute_list (85)
    on left: 20 21, on right: 13 14 15 16
attribute_names (86)
    on left: 22 23 24, on right: 21 23 24
attribute_name (87)
    on left: 25, on right: 22 23 24
constructor_spec (88)
    on left: 26, on right: 14 16
constructor_argument_list (89)
    on left: 27 28, on right: 26
argument_names (90)
    on left: 29 30 31, on right: 28 30 31
argument_name (91)
    on left: 32, on right: 29 30 31
instance_line (92)
    on left: 33 34 35, on right: 8
object_id (93)
    on left: 36, on right: 33 34
constant_list (94)
    on left: 37 38, on right: 34 35 38
constant (95)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58 59 60 61 62 63 64 65, on right: 37 38 87 88 89 90 91
ansi_string (96)
    on left: 66, on right: 39
nchar_string (97)
    on left: 67, on right: 41
dq_string (98)
    on left: 68, on right: 40
sql2_date (99)
    on left: 69, on right: 43
sql2_time (100)
    on left: 70, on right: 44
sql2_timestamp (101)
    on left: 71, on right: 45
sql2_timestampltz (102)
    on left: 72, on right: 46
sql2_timestamptz (103)
    on left: 73, on right: 47
utime (104)
    on left: 74, on right: 48
sql2_datetime (105)
    on left: 75, on right: 49
sql2_datetimeltz (106)
    on left: 76, on right: 50
sql2_datetimetz (107)
    on left: 77, on right: 51
bit_string (108)
    on left: 78 79, on right: 42
object_reference (109)
    on left: 80 81, on right: 63
class_identifier (110)
    on left: 82 83, on right: 80 81
instance_number (111)
    on left: 84, on right: 81
set_constant (112)
    on left: 85 86, on right: 64
set_elements (113)
    on left: 87 88 89 90 91, on right: 86 88 89 90 91
system_object_reference (114)
    on left: 92, on right: 65
ref_type (115)
    on left: 93 94 95 96, on right: 92
monetary (116)
    on left: 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
    112 113 114 115 116 117 118 119 120 121, on right: 62


State 0

    0 $accept: . loader_start $end
    1 $@1: . %empty
    2 loader_start: . $@1 loader_lines

    $default  reduce using rule 1 ($@1)

    loader_start  go to state 1
    $@1           go to state 2


State 1

    0 $accept: loader_start . $end

    $end  shift, and go to state 3


State 2

    2 loader_start: $@1 . loader_lines
    3 loader_lines: . line
    4             | . loader_lines line
    5 line: . one_line NL
    6     | . NL
    7 one_line: . command_line
    8         | . instance_line
    9 command_line: . class_command
   10             | . id_command
   11 id_command: . CMD_ID IDENTIFIER INT_LIT
   12 class_command: . CMD_CLASS IDENTIFIER class_commamd_spec
   33 instance_line: . object_id
   34              | . object_id constant_list
   35              | . constant_list
   36 object_id: . OID_
   37 constant_list: . constant
   38              | . constant_list constant
   39 constant: . ansi_string
   40         | . dq_string
   41         | . nchar_string
   42         | . bit_string
   43         | . sql2_date
   44         | . sql2_time
   45         | . sql2_timestamp
   46         | . sql2_timestampltz
   47         | . sql2_timestamptz
   48         | . utime
   49         | . sql2_datetime
   50         | . sql2_datetimeltz
   51         | . sql2_datetimetz
   52         | . NULL_
   53         | . TIME_LIT4
   54         | . TIME_LIT42
   55         | . TIME_LIT3
   56         | . TIME_LIT31
   57         | . TIME_LIT2
   58         | . TIME_LIT1
   59         | . INT_LIT
   60         | . REAL_LIT
   61         | . DATE_LIT2
   62         | . monetary
   63         | . object_reference
   64         | . set_constant
   65         | . system_object_reference
   66 ansi_string: . Quote SQS_String_Body
   67 nchar_string: . NQuote SQS_String_Body
   68 dq_string: . DQuote DQS_String_Body
   69 sql2_date: . DATE_ Quote SQS_String_Body
   70 sql2_time: . TIME Quote SQS_String_Body
   71 sql2_timestamp: . TIMESTAMP Quote SQS_String_Body
   72 sql2_timestampltz: . TIMESTAMPLTZ Quote SQS_String_Body
   73 sql2_timestamptz: . TIMESTAMPTZ Quote SQS_String_Body
   74 utime: . UTIME Quote SQS_String_Body
   75 sql2_datetime: . DATETIME Quote SQS_String_Body
   76 sql2_datetimeltz: . DATETIMELTZ Quote SQS_String_Body
   77 sql2_datetimetz: . DATETIMETZ Quote SQS_String_Body
   78 bit_string: . BQuote SQS_String_Body
   79           | . XQuote SQS_String_Body
   80 object_reference: . OBJECT_REFERENCE class_identifier
   81                 | . OBJECT_REFERENCE class_identifier instance_number
   85 set_constant: . SET_START_BRACE SET_END_BRACE
   86             | . SET_START_BRACE set_elements SET_END_BRACE
   92 system_object_reference: . ref_type Quote SQS_String_Body
   93 ref_type: . REF_ELO_INT
   94         | . REF_ELO_EXT
   95         | . REF_USER
   96         | . REF_CLASS
   97 monetary: . DOLLAR_SYMBOL REAL_LIT
   98         | . YEN_SYMBOL REAL_LIT
   99         | . WON_SYMBOL REAL_LIT
  100         | . TURKISH_LIRA_CURRENCY REAL_LIT
  101         | . BACKSLASH REAL_LIT
  102         | . BRITISH_POUND_SYMBOL REAL_LIT
  103         | . CAMBODIAN_RIEL_SYMBOL REAL_LIT
  104         | . CHINESE_RENMINBI_SYMBOL REAL_LIT
  105         | . INDIAN_RUPEE_SYMBOL REAL_LIT
  106         | . RUSSIAN_RUBLE_SYMBOL REAL_LIT
  107         | . AUSTRALIAN_DOLLAR_SYMBOL REAL_LIT
  108         | . CANADIAN_DOLLAR_SYMBOL REAL_LIT
  109         | . BRASILIAN_REAL_SYMBOL REAL_LIT
  110         | . ROMANIAN_LEU_SYMBOL REAL_LIT
  111         | . EURO_SYMBOL REAL_LIT
  112         | . SWISS_FRANC_SYMBOL REAL_LIT
  113         | . DANISH_KRONE_SYMBOL REAL_LIT
  114         | . NORWEGIAN_KRONE_SYMBOL REAL_LIT
  115         | . BULGARIAN_LEV_SYMBOL REAL_LIT
  116         | . VIETNAMESE_DONG_SYMBOL REAL_LIT
  117         | . CZECH_KORUNA_SYMBOL REAL_LIT
  118         | . POLISH_ZLOTY_SYMBOL REAL_LIT
  119         | . SWEDISH_KRONA_SYMBOL REAL_LIT
  120         | . CROATIAN_KUNA_SYMBOL REAL_LIT
  121         | . SERBIAN_DINAR_SYMBOL REAL_LIT

    NL                        shift, and go to state 4
    NULL_                     shift, and go to state 5
    DATE_                     shift, and go to state 6
    TIME                      shift, and go to state 7
    UTIME                     shift, and go to state 8
    TIMESTAMP                 shift, and go to state 9
    TIMESTAMPLTZ              shift, and go to state 10
    TIMESTAMPTZ               shift, and go to state 11
    DATETIME                  shift, and go to state 12
    DATETIMELTZ               shift, and go to state 13
    DATETIMETZ                shift, and go to state 14
    CMD_ID                    shift, and go to state 15
    CMD_CLASS                 shift, and go to state 16
    REF_ELO_INT               shift, and go to state 17
    REF_ELO_EXT               shift, and go to state 18
    REF_USER                  shift, and go to state 19
    REF_CLASS                 shift, and go to state 20
    OBJECT_REFERENCE          shift, and go to state 21
    SET_START_BRACE           shift, and go to state 22
    REAL_LIT                  shift, and go to state 23
    INT_LIT                   shift, and go to state 24
    OID_                      shift, and go to state 25
    TIME_LIT4                 shift, and go to state 26
    TIME_LIT42                shift, and go to state 27
    TIME_LIT3                 shift, and go to state 28
    TIME_LIT31                shift, and go to state 29
    TIME_LIT2                 shift, and go to state 30
    TIME_LIT1                 shift, and go to state 31
    DATE_LIT2                 shift, and go to state 32
    YEN_SYMBOL                shift, and go to state 33
    WON_SYMBOL                shift, and go to state 34
    BACKSLASH                 shift, and go to state 35
    DOLLAR_SYMBOL             shift, and go to state 36
    TURKISH_LIRA_CURRENCY     shift, and go to state 37
    BRITISH_POUND_SYMBOL      shift, and go to state 38
    CAMBODIAN_RIEL_SYMBOL     shift, and go to state 39
    CHINESE_RENMINBI_SYMBOL   shift, and go to state 40
    INDIAN_RUPEE_SYMBOL       shift, and go to state 41
    RUSSIAN_RUBLE_SYMBOL      shift, and go to state 42
    AUSTRALIAN_DOLLAR_SYMBOL  shift, and go to state 43
    CANADIAN_DOLLAR_SYMBOL    shift, and go to state 44
    BRASILIAN_REAL_SYMBOL     shift, and go to state 45
    ROMANIAN_LEU_SYMBOL       shift, and go to state 46
    EURO_SYMBOL               shift, and go to state 47
    SWISS_FRANC_SYMBOL        shift, and go to state 48
    DANISH_KRONE_SYMBOL       shift, and go to state 49
    NORWEGIAN_KRONE_SYMBOL    shift, and go to state 50
    BULGARIAN_LEV_SYMBOL      shift, and go to state 51
    VIETNAMESE_DONG_SYMBOL    shift, and go to state 52
    CZECH_KORUNA_SYMBOL       shift, and go to state 53
    POLISH_ZLOTY_SYMBOL       shift, and go to state 54
    SWEDISH_KRONA_SYMBOL      shift, and go to state 55
    CROATIAN_KUNA_SYMBOL      shift, and go to state 56
    SERBIAN_DINAR_SYMBOL      shift, and go to state 57
    Quote                     shift, and go to state 58
    DQuote                    shift, and go to state 59
    NQuote                    shift, and go to state 60
    BQuote                    shift, and go to state 61
    XQuote                    shift, and go to state 62

    loader_lines             go to state 63
    line                     go to state 64
    one_line                 go to state 65
    command_line             go to state 66
    id_command               go to state 67
    class_command            go to state 68
    instance_line            go to state 69
    object_id                go to state 70
    constant_list            go to state 71
    constant                 go to state 72
    ansi_string              go to state 73
    nchar_string             go to state 74
    dq_string                go to state 75
    sql2_date                go to state 76
    sql2_time                go to state 77
    sql2_timestamp           go to state 78
    sql2_timestampltz        go to state 79
    sql2_timestamptz         go to state 80
    utime                    go to state 81
    sql2_datetime            go to state 82
    sql2_datetimeltz         go to state 83
    sql2_datetimetz          go to state 84
    bit_string               go to state 85
    object_reference         go to state 86
    set_constant             go to state 87
    system_object_reference  go to state 88
    ref_type                 go to state 89
    monetary                 go to state 90


State 3

    0 $accept: loader_start $end .

    $default  accept


State 4

    6 line: NL .

    $default  reduce using rule 6 (line)


State 5

   52 constant: NULL_ .

    $default  reduce using rule 52 (constant)


State 6

   69 sql2_date: DATE_ . Quote SQS_String_Body

    Quote  shift, and go to state 91


State 7

   70 sql2_time: TIME . Quote SQS_String_Body

    Quote  shift, and go to state 92


State 8

   74 utime: UTIME . Quote SQS_String_Body

    Quote  shift, and go to state 93


State 9

   71 sql2_timestamp: TIMESTAMP . Quote SQS_String_Body

    Quote  shift, and go to state 94


State 10

   72 sql2_timestampltz: TIMESTAMPLTZ . Quote SQS_String_Body

    Quote  shift, and go to state 95


State 11

   73 sql2_timestamptz: TIMESTAMPTZ . Quote SQS_String_Body

    Quote  shift, and go to state 96


State 12

   75 sql2_datetime: DATETIME . Quote SQS_String_Body

    Quote  shift, and go to state 97


State 13

   76 sql2_datetimeltz: DATETIMELTZ . Quote SQS_String_Body

    Quote  shift, and go to state 98


State 14

   77 sql2_datetimetz: DATETIMETZ . Quote SQS_String_Body

    Quote  shift, and go to state 99


State 15

   11 id_command: CMD_ID . IDENTIFIER INT_LIT

    IDENTIFIER  shift, and go to state 100


State 16

   12 class_command: CMD_CLASS . IDENTIFIER class_commamd_spec

    IDENTIFIER  shift, and go to state 101


State 17

   93 ref_type: REF_ELO_INT .

    $default  reduce using rule 93 (ref_type)


State 18

   94 ref_type: REF_ELO_EXT .

    $default  reduce using rule 94 (ref_type)


State 19

   95 ref_type: REF_USER .

    $default  reduce using rule 95 (ref_type)


State 20

   96 ref_type: REF_CLASS .

    $default  reduce using rule 96 (ref_type)


State 21

   80 object_reference: OBJECT_REFERENCE . class_identifier
   81                 | OBJECT_REFERENCE . class_identifier instance_number
   82 class_identifier: . INT_LIT
   83                 | . IDENTIFIER

    INT_LIT     shift, and go to state 102
    IDENTIFIER  shift, and go to state 103

    class_identifier  go to state 104


State 22

   39 constant: . ansi_string
   40         | . dq_string
   41         | . nchar_string
   42         | . bit_string
   43         | . sql2_date
   44         | . sql2_time
   45         | . sql2_timestamp
   46         | . sql2_timestampltz
   47         | . sql2_timestamptz
   48         | . utime
   49         | . sql2_datetime
   50         | . sql2_datetimeltz
   51         | . sql2_datetimetz
   52         | . NULL_
   53         | . TIME_LIT4
   54         | . TIME_LIT42
   55         | . TIME_LIT3
   56         | . TIME_LIT31
   57         | . TIME_LIT2
   58         | . TIME_LIT1
   59         | . INT_LIT
   60         | . REAL_LIT
   61         | . DATE_LIT2
   62         | . monetary
   63         | . object_reference
   64         | . set_constant
   65         | . system_object_reference
   66 ansi_string: . Quote SQS_String_Body
   67 nchar_string: . NQuote SQS_String_Body
   68 dq_string: . DQuote DQS_String_Body
   69 sql2_date: . DATE_ Quote SQS_String_Body
   70 sql2_time: . TIME Quote SQS_String_Body
   71 sql2_timestamp: . TIMESTAMP Quote SQS_String_Body
   72 sql2_timestampltz: . TIMESTAMPLTZ Quote SQS_String_Body
   73 sql2_timestamptz: . TIMESTAMPTZ Quote SQS_String_Body
   74 utime: . UTIME Quote SQS_String_Body
   75 sql2_datetime: . DATETIME Quote SQS_String_Body
   76 sql2_datetimeltz: . DATETIMELTZ Quote SQS_String_Body
   77 sql2_datetimetz: . DATETIMETZ Quote SQS_String_Body
   78 bit_string: . BQuote SQS_String_Body
   79           | . XQuote SQS_String_Body
   80 object_reference: . OBJECT_REFERENCE class_identifier
   81                 | . OBJECT_REFERENCE class_identifier instance_number
   85 set_constant: . SET_START_BRACE SET_END_BRACE
   85             | SET_START_BRACE . SET_END_BRACE
   86             | . SET_START_BRACE set_elements SET_END_BRACE
   86             | SET_START_BRACE . set_elements SET_END_BRACE
   87 set_elements: . constant
   88             | . set_elements constant
   89             | . set_elements COMMA constant
   90             | . set_elements NL constant
   91             | . set_elements COMMA NL constant
   92 system_object_reference: . ref_type Quote SQS_String_Body
   93 ref_type: . REF_ELO_INT
   94         | . REF_ELO_EXT
   95         | . REF_USER
   96         | . REF_CLASS
   97 monetary: . DOLLAR_SYMBOL REAL_LIT
   98         | . YEN_SYMBOL REAL_LIT
   99         | . WON_SYMBOL REAL_LIT
  100         | . TURKISH_LIRA_CURRENCY REAL_LIT
  101         | . BACKSLASH REAL_LIT
  102         | . BRITISH_POUND_SYMBOL REAL_LIT
  103         | . CAMBODIAN_RIEL_SYMBOL REAL_LIT
  104         | . CHINESE_RENMINBI_SYMBOL REAL_LIT
  105         | . INDIAN_RUPEE_SYMBOL REAL_LIT
  106         | . RUSSIAN_RUBLE_SYMBOL REAL_LIT
  107         | . AUSTRALIAN_DOLLAR_SYMBOL REAL_LIT
  108         | . CANADIAN_DOLLAR_SYMBOL REAL_LIT
  109         | . BRASILIAN_REAL_SYMBOL REAL_LIT
  110         | . ROMANIAN_LEU_SYMBOL REAL_LIT
  111         | . EURO_SYMBOL REAL_LIT
  112         | . SWISS_FRANC_SYMBOL REAL_LIT
  113         | . DANISH_KRONE_SYMBOL REAL_LIT
  114         | . NORWEGIAN_KRONE_SYMBOL REAL_LIT
  115         | . BULGARIAN_LEV_SYMBOL REAL_LIT
  116         | . VIETNAMESE_DONG_SYMBOL REAL_LIT
  117         | . CZECH_KORUNA_SYMBOL REAL_LIT
  118         | . POLISH_ZLOTY_SYMBOL REAL_LIT
  119         | . SWEDISH_KRONA_SYMBOL REAL_LIT
  120         | . CROATIAN_KUNA_SYMBOL REAL_LIT
  121         | . SERBIAN_DINAR_SYMBOL REAL_LIT

    NULL_                     shift, and go to state 5
    DATE_                     shift, and go to state 6
    TIME                      shift, and go to state 7
    UTIME                     shift, and go to state 8
    TIMESTAMP                 shift, and go to state 9
    TIMESTAMPLTZ              shift, and go to state 10
    TIMESTAMPTZ               shift, and go to state 11
    DATETIME                  shift, and go to state 12
    DATETIMELTZ               shift, and go to state 13
    DATETIMETZ                shift, and go to state 14
    REF_ELO_INT               shift, and go to state 17
    REF_ELO_EXT               shift, and go to state 18
    REF_USER                  shift, and go to state 19
    REF_CLASS                 shift, and go to state 20
    OBJECT_REFERENCE          shift, and go to state 21
    SET_START_BRACE           shift, and go to state 22
    SET_END_BRACE             shift, and go to state 105
    REAL_LIT                  shift, and go to state 23
    INT_LIT                   shift, and go to state 24
    TIME_LIT4                 shift, and go to state 26
    TIME_LIT42                shift, and go to state 27
    TIME_LIT3                 shift, and go to state 28
    TIME_LIT31                shift, and go to state 29
    TIME_LIT2                 shift, and go to state 30
    TIME_LIT1                 shift, and go to state 31
    DATE_LIT2                 shift, and go to state 32
    YEN_SYMBOL                shift, and go to state 33
    WON_SYMBOL                shift, and go to state 34
    BACKSLASH                 shift, and go to state 35
    DOLLAR_SYMBOL             shift, and go to state 36
    TURKISH_LIRA_CURRENCY     shift, and go to state 37
    BRITISH_POUND_SYMBOL      shift, and go to state 38
    CAMBODIAN_RIEL_SYMBOL     shift, and go to state 39
    CHINESE_RENMINBI_SYMBOL   shift, and go to state 40
    INDIAN_RUPEE_SYMBOL       shift, and go to state 41
    RUSSIAN_RUBLE_SYMBOL      shift, and go to state 42
    AUSTRALIAN_DOLLAR_SYMBOL  shift, and go to state 43
    CANADIAN_DOLLAR_SYMBOL    shift, and go to state 44
    BRASILIAN_REAL_SYMBOL     shift, and go to state 45
    ROMANIAN_LEU_SYMBOL       shift, and go to state 46
    EURO_SYMBOL               shift, and go to state 47
    SWISS_FRANC_SYMBOL        shift, and go to state 48
    DANISH_KRONE_SYMBOL       shift, and go to state 49
    NORWEGIAN_KRONE_SYMBOL    shift, and go to state 50
    BULGARIAN_LEV_SYMBOL      shift, and go to state 51
    VIETNAMESE_DONG_SYMBOL    shift, and go to state 52
    CZECH_KORUNA_SYMBOL       shift, and go to state 53
    POLISH_ZLOTY_SYMBOL       shift, and go to state 54
    SWEDISH_KRONA_SYMBOL      shift, and go to state 55
    CROATIAN_KUNA_SYMBOL      shift, and go to state 56
    SERBIAN_DINAR_SYMBOL      shift, and go to state 57
    Quote                     shift, and go to state 58
    DQuote                    shift, and go to state 59
    NQuote                    shift, and go to state 60
    BQuote                    shift, and go to state 61
    XQuote                    shift, and go to state 62

    constant                 go to state 106
    ansi_string              go to state 73
    nchar_string             go to state 74
    dq_string                go to state 75
    sql2_date                go to state 76
    sql2_time                go to state 77
    sql2_timestamp           go to state 78
    sql2_timestampltz        go to state 79
    sql2_timestamptz         go to state 80
    utime                    go to state 81
    sql2_datetime            go to state 82
    sql2_datetimeltz         go to state 83
    sql2_datetimetz          go to state 84
    bit_string               go to state 85
    object_reference         go to state 86
    set_constant             go to state 87
    set_elements             go to state 107
    system_object_reference  go to state 88
    ref_type                 go to state 89
    monetary                 go to state 90


State 23

   60 constant: REAL_LIT .

    $default  reduce using rule 60 (constant)


State 24

   59 constant: INT_LIT .

    $default  reduce using rule 59 (constant)


State 25

   36 object_id: OID_ .

    $default  reduce using rule 36 (object_id)


State 26

   53 constant: TIME_LIT4 .

    $default  reduce using rule 53 (constant)


State 27

   54 constant: TIME_LIT42 .

    $default  reduce using rule 54 (constant)


State 28

   55 constant: TIME_LIT3 .

    $default  reduce using rule 55 (constant)


State 29

   56 constant: TIME_LIT31 .

    $default  reduce using rule 56 (constant)


State 30

   57 constant: TIME_LIT2 .

    $default  reduce using rule 57 (constant)


State 31

   58 constant: TIME_LIT1 .

    $default  reduce using rule 58 (constant)


State 32

   61 constant: DATE_LIT2 .

    $default  reduce using rule 61 (constant)


State 33

   98 monetary: YEN_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 108


State 34

   99 monetary: WON_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 109


State 35

  101 monetary: BACKSLASH . REAL_LIT

    REAL_LIT  shift, and go to state 110


State 36

   97 monetary: DOLLAR_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 111


State 37

  100 monetary: TURKISH_LIRA_CURRENCY . REAL_LIT

    REAL_LIT  shift, and go to state 112


State 38

  102 monetary: BRITISH_POUND_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 113


State 39

  103 monetary: CAMBODIAN_RIEL_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 114


State 40

  104 monetary: CHINESE_RENMINBI_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 115


State 41

  105 monetary: INDIAN_RUPEE_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 116


State 42

  106 monetary: RUSSIAN_RUBLE_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 117


State 43

  107 monetary: AUSTRALIAN_DOLLAR_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 118


State 44

  108 monetary: CANADIAN_DOLLAR_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 119


State 45

  109 monetary: BRASILIAN_REAL_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 120


State 46

  110 monetary: ROMANIAN_LEU_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 121


State 47

  111 monetary: EURO_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 122


State 48

  112 monetary: SWISS_FRANC_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 123


State 49

  113 monetary: DANISH_KRONE_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 124


State 50

  114 monetary: NORWEGIAN_KRONE_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 125


State 51

  115 monetary: BULGARIAN_LEV_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 126


State 52

  116 monetary: VIETNAMESE_DONG_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 127


State 53

  117 monetary: CZECH_KORUNA_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 128


State 54

  118 monetary: POLISH_ZLOTY_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 129


State 55

  119 monetary: SWEDISH_KRONA_SYMBOL . REAL_LIT

    REAL_LIT  shift, and go to state 130


State 56

  120 monetary: CROATIAN_KUNA_SYMBOL . REAL_LIT
